<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		 <version>3.1.5</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.ruriel</groupId>
	<artifactId>ldap-rest-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ldap-rest-api</name>
	<description>LDAP REST API</description>

	<properties> 
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <file.encoding>UTF-8</file.encoding>
        <springdoc.version>2.2.0</springdoc.version>
        <json-path.version>2.8.0</json-path.version>
        <spring-native.version>0.9.2</spring-native.version>
        <jib-maven-plugin.version>3.2.0</jib-maven-plugin.version>
        <springdoc-openapi-maven-plugin.version>1.4</springdoc-openapi-maven-plugin.version>
        <jib.from.image>openjdk:17-slim</jib.from.image>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
        <spring-boot.version>3.1.5</spring-boot.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.ldap</groupId>
			<artifactId>spring-ldap-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-ldap</artifactId>
		</dependency>
		<dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
		 <!-- springdoc ui -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>			 
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId> 
				<configuration>
					<forkCount>0</forkCount>
					<argLine>
					--add-modules ALL-SYSTEM
					--add-opens java.base/jdk.internal.util=ALL-UNNAMED
					--add-exports jdk.unsupported/sun.reflect=ALL-UNNAMED
					--illegal-access=permit
					</argLine>
					<systemPropertyVariables>
					<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
					</systemPropertyVariables>
				</configuration>
				</plugin>
		</plugins>
		<pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springdoc</groupId>
                            <artifactId>springdoc-openapi-maven-plugin</artifactId>
                            <version>${springdoc-openapi-maven-plugin.version}</version>
                        </plugin>
                    </plugins>
        </pluginManagement>
	</build>

</project>
